app/stylesheets/main.scss
@import "partials/settings";
@import "~foundation-sites/scss/foundation";
@import "partials/base";
@include foundation-everything($flex: true);

@font-face {
  font-family: Conduit;
  /* Don't use line-breaks here, SASS doesn't like them */
  src: url("../fonts/ConduitITCStd.otf") format("opentype"), url("../fonts/ConduitITCStd.woff") format("woff");;
  font-style: normal;
}

@font-face {
  font-family: Conduit;
  src: url("../fonts/ConduitITCStd-Bold.otf") format("opentype"), url("../fonts/ConduitITCStd-Bold.woff") format("woff");;
  font-weight: bold;
}

@font-face {
  font-family: Conduit;
  src: url("../fonts/ConduitITCStd-Italic.otf") format("opentype"), url("../fonts/ConduitITCStd-Italic.woff") format("woff");
  font-style: italic;
}

@font-face {
  font-family: Conduit;
  src: url("../fonts/ConduitITCStd-BoldItalic.otf") format("opentype"), url("../fonts/ConduitITCStd-BoldItalic.woff") format("woff");
  font-weight: bold;
  font-style: italic;
}

@media #{$small-only} {
  body,html {
    font-size: 4vmin;
  }

  ul.job_list_items li a {
    font-size: 10.3em;
  }
  #logo {
    width: 70vmin;
  }
}
.inline-logo {
  height: 1em;
}

@media #{$medium-only} {
  body,html {
    font-size: 4vmin;
  }
  #logo {
    width: 70vmin;
  }
}

@media #{$large-only} {
  ul.job_list_items li a {
    font-size: 1.3em;
  }
}

.row {
  max-width: 100%;
}
body {
  font-family: Conduit;
  color: white;
  white-space: normal;
  background-repeat: no-repeat;
  // 100 * n_sections
}

h1, h2 {
  text-transform: uppercase;
}

h2 {
  line-height: 1.1;
}

.mainContainer {
  width: 100%;
  height: 100%;
}

section {
  position: relative;
  display: inline-block;
  width: 100vw;
  height: 100vh !important;
  margin: 0;
  vertical-align: top;
}

.work-arguments li, dd {
  white-space: normal;
  margin-top: 0.4em;
  margin-bottom: 1em;
}

dt {
  display: inline-block;
  color: rgba(5, 55, 100, 1);
  background-color: $white;
  font-weight: bold;
  text-transform: uppercase;
  padding: 0.4em 0.8em 0.1em 0.65em;
  margin: 0.75em 0em 1em 0em;
  vertical-align: middle;

}

.content {
  z-index: 1;
  width: 100%;
  height: 100%;
  position: relative;
}

.decorations {
  width: 100%;
}

.noMouse {
  pointer-events: none;
}

#mouseIcon {
  position: absolute;
  top: 85%;
  left: 50%;
  transform: translateX(-50%);
  text-transform: uppercase;
}

#logo {
  margin-top: 60px;
  margin-bottom: 20px;
}

#sunburstContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
}

.sunburst-svg {
  width: 100vmin;
}

#sunburst3 {
  position: absolute;
  top: 50%;
  margin-top: -800px;
  left: 50%;
  margin-left: -800px;
  z-index: -1;
}

#sunburst2 {
  //transform-origin: 50% 50%;
  //animation: orbitSpin 300s infinite linear;
}

@keyframes orbitSpin {
  0% { transform: rotate(0deg);}
  100% { transform: rotate(360deg);}
}

#sunburst path {
  stroke: rgb(60, 115, 165);
  fill-rule: evenodd;
}

#sunburst2 path {
  stroke: rgba(255, 255, 255, 1.0);
  fill-rule: evenodd;
}

#sunburst2 {
  opacity: 0.05;
}

#moon {
  position: absolute;
  bottom: 0;
  right: 0;
  opacity: 0.0;
}

#sun {
  position: absolute;
  bottom: 0;
  left: 0;
  opacity: 0.0;
}

.fixed-menu {
  position: fixed;
  top: 20px;
  left: 20px;
  width: 250px;
  height: auto;
  z-index: 3;
}
  .fixed-menu .menu {
    float: left;
    margin-left: 20px;
  }

  .fixed-menu .menu li {
    // border-bottom: 1px solid #fff;
    text-transform: uppercase;
    font-weight: bold;
    margin-bottom: 3px;
  }
    .fixed-menu .menu li.menu_divider {
      border-bottom: none;
      margin: 10px 0;
      height: 20px;
    }
    .fixed-menu .menu li.menu_divider::after {
      background: none;
    }
    .fixed-menu .menu li a {
      color: #fff;
      padding: 0.3rem 0;
      padding-bottom: 0;
      margin-bottom: 0;
    }
    .fixed-menu .menu li:first-child {
      border-bottom: none;
      margin-bottom: 20px;
    }
    .fixed-menu .menu li:last-child {
      border-bottom: none;
      margin-top: 20px;
    }
    .fixed-menu .menu li:first-child::after,
    .fixed-menu .menu li:last-child::after {
      background: none;
    }

.fixed-menu .menu li::after{
  content: "";
  position: absolute;

  height: 1px;
  width: 100%;
  background: #444;
  background: linear-gradient(to right, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
 }

.asterisk {
  font-size: 3.2em;
  font-weight: bold;
  float: left;
  line-height: 1;
}

.asterisk:hover {
  cursor: pointer;
}

// Jobs
ul.key_skills li:before {
   content: "*";
   font-size: 1.5em;
   font-weight: bold;
   vertical-align: top;
   position: relative;
   top: -2px;
}

ul.job_list_items {
  text-align: right;
}
  ul.job_list_items li{
    width: 300px;
    height: 50px;
    background: #3B4E6E;
    margin-bottom: 1px;
    text-align: left;
  }
  ul.job_list_items li a {
    // height: 50px;
    height: 100%;
    color: #fff;
    line-height: 1.3 !important;
    font-weight: 400;
    font-size: 1.5em;
    padding: 0.7rem 1rem !important;/* !important because this gets overwritten by .menu.simple a*/
  }

#firstPage .columns{
  white-space: normal;
}

#firstPage .job_openings {
  padding-right: 0;
}

.profile {
  padding-right: 0;
  opacity: 0;
  position: relative;
  max-height: 100vh;
  z-index: 10;
}
.close-button {
  position: absolute;
  left: -60px;
  background: #757C87;
  width: 60px;
  height: 55px;
  text-align: center;
  line-height: 60px;
  font-weight: bold;
  color: #fff;
  font-size: 4em;
  top: 0;
}

// Slider
.slide-in {
	visibility: hidden;
	transition:visibility 0s linear 0.2s,opacity 0.2s linear;
  padding-left: 0;
}

.slide-in.is-visible {
	visibility: visible;
  opacity: 1;
	transition: visibility 0s 0s;
  transition: opacity 0.3s ease-in;
}

.slide-in-header {
	position: absolute;
	top: -50px;
	width: 90%;
	height: 50px;
	transition: top 0.3s 0s;
}

@media #{$medium-only} {
  .slide-in {
    display: none;
  }
}

.is-visible .slide-in-header {
	top: 0;
	transition: top 0.3s 0.3s;
}
.arrow-left {
	width: 0;
	height: 0;
	border-top: 20px solid transparent;
	border-bottom: 20px solid transparent;
  border-right:20px solid #fff;
  position: absolute;
  left: -15px;
}

.panel-container {
  background: #fff;
  color: #3B4E6E;
  height: 100vh;
	transition-property: transform;
	transition-duration: 0.3s;
	transition-delay: 0.3s;
 	transform: translate3d(100%, 0, 0);
}

.is-visible .panel-container {
	transform: translate3d(0, 0, 0);
	transition-delay: 0s;
}
.panel-content {
  padding: 20px;
  height: 100vh;
  overflow-y: scroll;
}

.codestar-button {
  border: 1px solid white;
  background-color: transparent;
  text-transform: uppercase;
  font-weight: bold;
  padding-bottom: 0.6em;
}

.codestar-button:hover {
  background-color: rgba(255, 255, 255, 0.5);
}

.codestar-button:active {
  background-color: rgba(255, 255, 255, 0.7);
}

.codestar-button:focus {
  background-color: rgba(255, 255, 255, 0.3);
}

.codestar-button:visited {
  background-color: transparent;
}

.why {
  white-space: normal;
}

ul.why li:before {
  content: '+';
  font-size: 1.5em;
  font-weight: bold;
  padding-right: 0.5em;
  margin-left: -1em;
}

ul.why li {
  list-style: none;
  line-height: normal;
  margin-bottom: 1.1em;
}

.team-link, .case-link {
  stroke-width: 1px;
  stroke: white;
}

#map {
  width: 100%;
  height: 100%;
  filter: grayscale(100%);
}

.contact_form_container {
  padding-right: 0;
}

#contact_form {
  margin-left: 10px;
}

.map_container {
  padding-left: 0;
  position: relative;
  height: 100%;
}
#contact_form .row .columns {
  padding-right: 2px;
  padding-left: 0;
}

#map {
  position: absolute;
}

.contact_data_table {
  width: 100%;
  background: rgb(0, 32, 65);
  opacity: 0.8;
  position: absolute;
  z-index: 5;
  bottom: 0;
  margin-bottom: 0;
}

.contact_data_table tbody {
  background: none;
  border: none;
}

.contact_data_table td {
  padding: 1em;
}

.contact_data_table tr:nth-child(even) {
  background: none;
}

.contact_data_table .contact_icon {
  padding-right: 0.5em;
  text-align: right;
}

.contact_data_table .contact_info {
  padding-left: 0;
  padding-top: 1.4em;
}

.contact_button a {
  width: 100%;
  margin: 0;
}

.decorations2 {
  position: absolute;
  top: 0;
  z-index: 10;
}

#curved-lines {
    position: absolute;
    max-width: none;
    width: 100vw;
    top: -100vw;
    transform: translateY(-50vh);
}
#big-lines {
    position: absolute;
    max-width: none;
    height: 100vh;
    top: -100vh;
    left: -6.866vh;
    transform: translateX(50vw);
}
#small-lines {
    position: absolute;
    max-width: none;
    height: 100vh;
    top: -100vh;
    left: -6.866vh;
    transform: translateX(50vw);
}

.featureTitle {
  text-transform: uppercase;
  font-weight: bold;
  font-size: 120%;
}

.featureIcon:hover, .featureTitle:hover {
  cursor: pointer;
}

.solar {
  width: 1px;
  border-spacing: 0;
  border-collapse: collapse;
  opacity: 0.1;
}

.array {
  padding: 0;
  perspective: 250px;
}

.panel {
  width: 40px;
  height: 40px;
  background-color: white;
  margin: 25px 25px 45px 25px;
}

#solararrayContainer {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  z-index: 30;
}

.form-input:placeholder-shown {
  text-transform: uppercase;
  opacity: 1.0;
  background-color: rgba(255, 255, 255, 0.5);
  color: white;
  padding-left: 0.7em;
  padding-top: 0.85em;
}
.form-input::-webkit-input-placeholder{
  color: white;
}
input:-moz-placeholder {
  color: white;
}
.form-input:focus {
  border: 2px solid rgb(0, 75, 145);
  padding-left: 0.57em;
  padding-top: 0.75em;
  background-color: rgba(255, 255, 255, 0.5);
}
.form-input {
  box-shadow: none;
  background-color: rgba(255, 255, 255, 0.5);
  border: none;
  color: rgb(0, 75, 145);
  padding-left: 0.7em;
  padding-top: 0.85em;
  margin-bottom: 2px;
}

.columns-space {
  margin-top: 1em;
}

#bericht {
  height: 6em;
}

#form-buttons {
  text-align: right;
  margin-top: 1em;
  margin-right: 1em;
}

.vertical-center {
  display: block;
  position: relative;
  top: 50%;
  transform: translateY(-50%);
}

.no-padding {
  padding: 0;
}

